Add infrastructure CDK setup and frontend env example

--- a/package.json
+++ b/package.json
@@ -5,12 +5,29 @@
   "scripts": {
     "dev": "concurrently \"pnpm dev:frontend\" \"pnpm dev:backend\"",
     "dev:frontend": "pnpm --filter frontend-nextjs dev",
-    "dev:backend": "pnpm --filter backend start:dev",
+    "dev:backend": "pnpm --filter backend-nestjs start:dev",
     "build": "pnpm build:backend && pnpm build:frontend",
     "build:frontend": "pnpm --filter frontend-nextjs build",
-    "build:backend": "pnpm --filter backend build",
+    "build:backend": "pnpm --filter backend-nestjs build",
     "install:all": "pnpm install",
-    "clean": "rm -rf node_modules apps/*/node_modules apps/*/dist apps/*/out"
+    "clean": "rm -rf node_modules apps/*/node_modules apps/*/dist apps/*/out",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:build": "docker-compose build",
+    "docker:rebuild": "docker-compose down && docker-compose build && docker-compose up -d",
+    "docker:logs": "docker-compose logs -f",
+    "docker:logs:backend": "docker-compose logs -f backend",
+    "docker:logs:frontend": "docker-compose logs -f frontend",
+    "docker:logs:postgres": "docker-compose logs -f postgres",
+    "docker:restart": "docker-compose restart",
+    "docker:restart:backend": "docker-compose restart backend",
+    "docker:restart:frontend": "docker-compose restart frontend",
+    "docker:ps": "docker-compose ps",
+    "docker:clean": "docker-compose down -v --rmi all",
+    "db:migrate": "docker-compose run --rm backend npx prisma migrate dev",
+    "db:migrate:deploy": "docker-compose run --rm backend npx prisma migrate deploy",
+    "db:studio": "docker-compose run --rm -p 5555:5555 backend npx prisma studio",
+    "db:seed": "docker-compose run --rm backend npx prisma db seed"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
