--- a/apps/frontend-nextjs/package.json
+++ b/apps/frontend-nextjs/package.json
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.8.9",
     "@heroui/theme": "^2.4.26",
     "@hookform/resolvers": "^5.2.2",
+    "axios": "^1.13.5",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
