--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,11 @@
 packages:
-  - 'apps/*'
-  - 'packages/*'
+  - apps/*
+  - packages/*
+
+ignoredBuiltDependencies:
+  - '@heroui/shared-utils'
+  - '@nestjs/core'
+  - '@prisma/engines'
+  - prisma
+  - sharp
+  - unrs-resolver
