fix: add deploy script and update workflow to use it

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -5,6 +5,8 @@
     "infrastructure": "bin/infrastructure.js"
   },
   "scripts": {
+    "synth": "cdk synth",
+    "deploy": "cdk deploy",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
