--- a/apps/backend-nestjs/package.json
+++ b/apps/backend-nestjs/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.17.1",
+    "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
