feat: async email notifications via SQS/Lambda/SES

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,10 +214,14 @@ jobs:
         working-directory: infrastructure
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
+          FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
         run: |
           npm run deploy -- \
             --require-approval never \
             --parameters DatabaseUrl=$DATABASE_URL
+            --parameters AdminEmail=$ADMIN_EMAIL \     
+            --parameters FromEmail=$FROM_EMAIL         
 
       - name: Get Stack Outputs
         id: stack-outputs
