--- a/apps/backend-nestjs/.env.example
+++ b/apps/backend-nestjs/.env.example
@@ -1,3 +1,8 @@
 PORT=3001
 DATABASE_URL="postgresql://thrivelab:thrivelab@localhost:5432/thrivelab"
 FRONTEND_URL="http://localhost:3000"
+NODE_ENV=development
+
+# For local dev, notifications are mocked (no SQS needed)
+NOTIFICATION_QUEUE_URL=mock://loc
+
