--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -22,6 +22,7 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
     "@aws-sdk/client-ses": "^3.990.0",
     "aws-cdk-lib": "^2.238.0",
     "constructs": "^10.0.0"
